# lsl

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYING
buildbot/: Makefile  master.cfg
cmake/: compat_flags.cmake  config.h  package_config.cmake  sources.list  sources_list.cmake
doc/: CMakeLists.txt  Doxyfile.in
lib/boost/extension/impl/: library_impl.hpp
lib/cimg/: CImg.h
old sl code/battle/: ibattle.cpp  ibattle.h
old sl code/networking/: server.h  serverevents.cpp  tasserver.cpp  tasserver.h
old sl code/user/: user.cpp  user.h
src/: CMakeLists.txt  channel.cpp  channel.h  lslconfig.cpp  lslconfig.h
src/battle/: battle.cpp  battle.h  enum.h  ibattle.cpp  ibattle.h  signals.h  tdfcontainer.cpp  tdfcontainer.h
src/container/: base.cc  base.cpp  base.h  battlelist.h  channellist.cpp  channellist.h  userlist.h
src/lsl/: CMakeLists.txt  channel.cpp  channel.h
src/lsl/battle/: battle.cpp  battle.h  enum.h  ibattle.cpp  ibattle.h  offline.cpp  offline.h  signals.h  singleplayer.cpp  singleplayer.h  tdfcontainer.cpp  tdfcontainer.h
src/lsl/container/: base.cc  base.h  battlelist.cpp  battlelist.h  channellist.h  userlist.cpp  userlist.h
src/lsl/networking/: commands.cpp  commands.h  enums.h  function_templates.h  iserver.cpp  iserver.h  socket.cpp  socket.h  tasserver.cpp  tasserver.h  tasserverdataformats.cpp  tasserverdataformats.h
src/lsl/spring/: spring.cpp  spring.h  springprocess.cpp  springprocess.h
src/lsl/user/: common.cpp  common.h  user.cpp  user.h  userdata.cpp  userdata.h
src/lslextract/: CMakeLists.txt  index.html  lslextract.cpp
src/lslextract/server/: connection.cpp  request_handler.cpp  server.cpp
src/lslunitsync/: CMakeLists.txt  c_api.cpp  c_api.h  data.h  enum.h  function_ptr.h  image.cpp  image.h  loader.cpp  loader.h  mmoptionmodel.cpp  mmoptionmodel.h  mru_cache.h  nonportable.h  optionswrapper.cpp  optionswrapper.h  sharedlib.cpp  sharedlib.h  signatures.h  springbundle.cpp  springbundle.h  unitsync.cpp  unitsync.h  unitsync_cache.cpp  unitsync_cache.h
src/lslutils/: CMakeLists.txt  autopointers.h  base64.h  config.cpp  config.h  conversion.cpp  conversion.h  crc.cpp  crc.h  debug.cpp  debug.h  global_interfaces.h  globalsmanager.cpp  globalsmanager.h  logging.h  lslconfig.cpp  lslconfig.h  misc.cpp  misc.h  mock_settings.h  mutexwrapper.h  net.cpp  net.h  thread.cpp  thread.h  type_forwards.h
src/networking/: commandparsing.h  commands.cpp  commands.h  enums.h  function_templates.h  iserver.cpp  iserver.h  iserver_private.h  lliserver_private.h  socket.cpp  socket.h  tasserver.cpp  tasserver.h  tasserverdataformats.cpp  tasserverdataformats.h
src/unitsync++/: CMakeLists.txt  c_api.cpp  c_api.h  data.h  enum.h  function_ptr.h  image.cpp  image.h  interleaved_ref.hpp  loader.cpp  loader.h  mmoptionmodel.cpp  mmoptionmodel.h  mru_cache.h  nonportable.h  optionswrapper.cpp  optionswrapper.h  signatures.h  thread.cpp  thread.h  unitsync.cpp  unitsync.h
src/user/: common.cpp  common.h  user.cpp  user.h
src/utils/: StandInDummy.h  conversion.h  crc.cpp  crc.h  datatypes.h  debug.h  global_interfaces.h  globalsmanager.cpp  globalsmanager.h  logging.h  lslconfig.h  misc.cpp  misc.h  mutexwrapper.h  net.cpp  type_forwards.h
test/: CMakeLists.txt  basic.cpp  commands.h  common.h  swig.cpp  usync.cpp
